--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script>
-      window.location.replace("https://ajayghimire.com/"); // Replace with your homepage or base URL if needed
+    <meta charset="utf-8">
+    <title>Ajay-Ghimire</title>
+    <script type="text/javascript">
+    
+      var pathSegmentsToKeep = 0;
+
+      var l = window.location;
+      l.replace(
+        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        l.hash
+      );
+
     </script>
   </head>
   <body>
-    <p>Redirecting...</p>
   </body>
 </html>
