--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ maximum-scale=1.0, user-scalable=no"
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Explore the web development projects and skills of Ajay Ghimire. See my latest work and contact me for collaborations and inquiries."
     />
     <link
       href="https://fonts.googleapis.com/css?family=Press+Start+2P"
@@ -67,7 +67,7 @@ maximum-scale=1.0, user-scalable=no"
       })(window.location);
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-    <title>Ajay-Ghimire</title>
+    <title>Ajay Ghimire - Software Developer Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
