added meta infos

--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale = 1.0, 
-maximum-scale=1.0, user-scalable=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Explore the web development projects and skills of Ajay Ghimire. See my latest work and contact me for collaborations and inquiries."
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Press+Start+2P"
-      rel="stylesheet"
-      type="text/css"
-    />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale = 1.0, 
+maximum-scale=1.0, user-scalable=no" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description"
+    content="Explore my web development projects and skills. See my latest work and contact me for collaborations and inquiries." />
+  <meta name="keywords"
+    content="Software Developer, Software Engineer, Sydney, Australia, Exploring Opportunities, JavaScript,TypeScript, Java, Ruby, Java, ReactJS, ReduxJS, Ruby on Rails, Spring Boot, MySQL, PostgreSQL, GitHub, Amazon Cloud, Netlify " />
+  <meta name="author" content="Ajay Ghimire" />
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" type="text/css" />
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
-    />
-    <script
-      src="https://free-equitool.netlify.app/equitoolHtml.js"
-      defer
-    ></script>
-    <script
-      src="https://free-equitool.netlify.app/equitoolmainfree.js"
-      defer
-    ></script>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" />
+  <script src="https://free-equitool.netlify.app/equitoolHtml.js" defer></script>
+  <script src="https://free-equitool.netlify.app/equitoolmainfree.js" defer></script>
 
-    <!--
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -47,29 +33,31 @@ maximum-scale=1.0, user-scalable=no"
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- Start Single Page Apps for GitHub Pages -->
-    <script type="text/javascript">
-      (function (l) {
-        if (l.search[1] === "/") {
-          var decoded = l.search
-            .slice(1)
-            .split("&")
-            .map(function (s) {
-              return s.replace(/~and~/g, "&");
-            })
-            .join("?");
-          window.history.replaceState(
-            null,
-            null,
-            l.pathname.slice(0, -1) + decoded + l.hash
-          );
-        }
-      })(window.location);
-    </script>
-    <!-- End Single Page Apps for GitHub Pages -->
-    <title>Ajay Ghimire - Software Developer Portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+  <!-- Start Single Page Apps for GitHub Pages -->
+  <script type="text/javascript">
+    (function (l) {
+      if (l.search[1] === "/") {
+        var decoded = l.search
+          .slice(1)
+          .split("&")
+          .map(function (s) {
+            return s.replace(/~and~/g, "&");
+          })
+          .join("?");
+        window.history.replaceState(
+          null,
+          null,
+          l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    })(window.location);
+  </script>
+  <!-- End Single Page Apps for GitHub Pages -->
+  <title>Ajay Ghimire's Portfolio</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
