--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="portfolio/ajay-ghimire/public/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale = 1.0, 
 maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#000000" />
@@ -53,7 +53,7 @@ maximum-scale=1.0, user-scalable=no" />
     })(window.location);
   </script>
   <!-- End Single Page Apps for GitHub Pages -->
-  <title>Ajay Ghimire's Portfolio</title>
+  <title>Ajay Ghimire</title>
 </head>
 
 <body>
